Accept a switch statement with an empty body
buildSwitchBlockCFG took the exit nodes of the last statement in the
switch body without checking that there was one, so `switch (x) { }`
raised IndexOutOfBoundsException and the whole file failed. With no
statements, control goes from the condition straight to whatever
follows the switch, so the condition is the exit node.

lang22_emptyswitch has such a switch.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>